# vrtr

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  readme.md
apps/: CMakeLists.txt
apps/assets/shaders/: 1.depthTest.comp  2.mvSplat.comp  CMakeLists.txt  add.comp  input_structures.glsl  mesh.frag  mesh.vert  simple_mesh.vert  texture_image.frag
apps/assets/shaders/compute/: gradient_color.comp  grid.comp  sky.comp  solid.comp
apps/assets/shaders/default/: default.frag  default.vert
apps/assets/shaders/mesh/: input_structures.glsl  mesh.frag
apps/assets/shaders/others/: triangle.vert
apps/assets/shaders/simple_mesh/: simple_mesh.frag
apps/main/: CMakeLists.txt  main.cpp
include/: Application.hpp  Engine.hpp  Window.hpp  camera.h  engine.h  renderable.h  vk_allocation.h  vk_descriptors.h  vk_engine.h  vk_images.h  vk_initializers.h  vk_loader.h  vk_pipelines.h  vk_types.h
include/GPU/: GPU.hpp
include/Scene/: Scene.hpp  renderable.hpp
include/pipelines/: BasePipeline.hpp  GltfPbrPipeline.hpp
include/utils/: DeletionQueue.hpp  json.hpp  log.hpp
include/utils/vk/: FrameData.hpp  allocation.hpp  buffers.hpp  common.hpp  descriptors.hpp  images.hpp  initializers.hpp  loader.hpp  pipelines.hpp
notes/: LoadedGLTF.drawio  design.md  engine_structure.drawio  notes.md  render_data.drawio  scene.drawio  structure.drawio
src/: camera.cpp  engine.cpp  renderable.cpp  vk_allocation.cpp  vk_engine.cpp  vk_images.cpp  vk_initializers.cpp  vk_loader.cpp
src/GPU/: GPU.cpp
src/utils/vk/: descriptors.cpp  images.cpp  initializers.cpp  loader.cpp  pipelines.cpp
